--- a/.github/workflows/Deploy-S3.yml
+++ b/.github/workflows/Deploy-S3.yml
@@ -20,4 +20,4 @@ jobs:
         
         run: | 
           ls -la 
-          aws s3 cp . s3://bkob-demo/ --recursive
+          aws s3 cp . s3://bkob/ --recursive
